[package]
name = "marketplace"
version = "1.2.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-beta.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "3.0.0-beta.1", default-features = false, features = ["ownable", "psp34", "reentrancy_guard"] }

token = {git = "https://github.com/polkadotrafat/custom_mint", version="1.2.0", default-features = false, features = ["ink-as-dependency"] }
marketplace_pkg = { path = "../../logics", default-features = false }

[lib]
name = "marketplace"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "openbrush/std",
    "marketplace_pkg/std",
]
ink-as-dependency = []

[profile.dev]
overflow-checks = false
[profile.release]
overflow-checks = false

